# texinfo-git-mirror

./: .cvsignore  00README-USE-BERLIOS-NOT-SAVANNAH  AUTHORS  ChangeLog  INSTALL  INTRODUCTION  Makefile.am  NEWS  README  README-alpha  README.dev  README.links  TODO  acinclude.m4  aclocal.m4  autogen.sh  bootstrap  configure.ac  dir-example  mkinstalldirs  system.h
doc/: .cvsignore  Makefile.am  README  fdl.texi  help2man  info-fr.texi  info-stnd.texi  info.1  info.texi  infokey.1  install-info.1  makeinfo.1  texi2dvi.1  texi2oldapi.texi  texindex.1  texinfo.tex  texinfo.txi  txi-cs.tex  txi-de.tex  txi-en.tex  txi-es.tex  txi-fr.tex  txi-is.tex  txi-it.tex  txi-nb.tex  txi-nl.tex  txi-no.tex  txi-pl.tex  txi-pt.tex  txi-ru.tex  txi-sr.tex  txi-tr.tex  txi-uk.tex  version-stnd.texi  version.texi
doc/refcard/: .cvsignore  Makefile  txicmdcheck  txirefcard.tex
lib/: Makefile.am  README  getopt.c  getopt1.c  getopt_.h  getopt_int.h  strcase.h  strdup.h  substring.c  system.h  tempname.c  xalloc.h  xexit.c  xmalloc.c  xstrdup.c
makeinfo/: .cvsignore  .gdbinit  Makefile.am  README  cmds.c  cmds.h  defun.c  defun.h  docbook.c  docbook.h  files.c  files.h  float.c  float.h  footnote.c  footnote.h  html.c  html.h  index.c  index.h  insertion.c  insertion.h  lang.c  lang.h  macro.c  macro.h  makeinfo.c  makeinfo.h  multi.c  multi.h  node.c  node.h  sectioning.c  sectioning.h  texinfo.dtd  toc.c  toc.h  xml.c  xml.h  xref.c  (+1 more)
makeinfo/tests/: Makefile.am  accent  accentenc  cond  copying  defxcond  emph-option  html-8bit  html-docdesc  html-extrali  html-manuals  html-min  html-para  html-title  html-top  include-value  include-value.txi  macro-at  menu-whitespace  no-headers  node-expand  node-value  node-whitespace  quote-args  top  top2  twofiles
texi2html/: .cvsignore  AUTHORS  ChangeLog  INTRODUCTION  Makefile  Makefile.am  Makefile.in  MySimple.pm  MySimple.pod  NEWS  README  README.dev  T2h_i18n.pm  T2h_l2h.pm  T2h_nounicode.pm  T2h_unicode.pm  TODO  aclocal.m4  addformats.sh  autogen.sh  buildt2h.sh  check_texinfo.pl.in  config.cache  config.status  configure  configure.ac  configure.in  documentlanguages.pl  gettext_to_separated.pl  l2h.init  manage_i18n.pl  manage_i18n.pl.in  mdate-sh  missing-texi2html  mkinstalldirs  parse_8bit_makeinfo_maps.pl  regenerate_documentlanguages.pl  separated_to_hash.pl  texi2html  texi2html.1  (+7 more)
texi2html/Tests/: Makefile.am  Makefile.in  README  test.sh
texi2html/Tests/GermanNodeTest/: Makefile  nodetest.texi  nodetest_for_makeinfo.texi
texi2html/Tests/GermanNodeTest_res/: nodetest.2  nodetest.html  nodetest.passfirst  nodetest.passtexi  (+4 more)
texi2html/doc/: .cvsignore  IDEAS  Makefile  Makefile.am  Makefile.in  TODO  custhtml.texi  custpage.texi  extfile.texi  ifo.texi  info_format_informations.txt  initfile.texi  options.texi  reference.texi  stamp-vti  texi2html.1.in  texi2html.html  texi2html.info  texi2html.texi  umlaut.texi  version.texi
texi2html/examples/: book.init  chm.init  docbook.init  enable_encoding.init  enable_encoding.pm  html32.init  info.init  inlinestyle.init  makeinfo.init  makeinfo.pm  mediawiki.init  noheaders.init  noheaders.pm  roff.init  roff.pm  style_example.css  tex4ht.init  texinfo-bright-colors.css  utf8.init  utf8.pm  xhtml.init  xhtml.pm  xml.init
texi2html/formats/: docbook.init  docbook.pm  html.init  html.pm  info.init  info.pm  plaintext.init  plaintext.pm  xml.init
texi2html/i18n/: de  en  es  fr  hu  it  ja  nl  no  pt  pt_BR
texi2html/images/: COPYING
texi2html/lib/: README
texi2html/maintained_extra/: book.init  book.pm  chm.init  chm.pm  html32.init  html32.pm  mediawiki.init  mediawiki.pm  tex4ht.init  tex4ht.pm
texi2html/po_document/: .cvsignore  LINGUAS  Makevars  Makevars.in  POTFILES.in  POTFILES.in.in  de.us-ascii.po  es.us-ascii.po  fr.us-ascii.po  hu.po  it.po  ja.po  ja.utf-8.po  nl.us-ascii.po  no.us-ascii.po  pt.us-ascii.po  pt_BR.us-ascii.po
texi2html/po_messages/: .cvsignore  LINGUAS  Makevars  Makevars.in  POTFILES.in  POTFILES.in.in  cs.po  da.po  de.po  de_AT.po  eo.po  es.po  fr.po  he.po  hr.po  hu.po  id.po  it.po  ja.po  nb.po  nl.po  pl.po  ro.po  ru.po  rw.po  sv.po  tr.po  vi.po  zh_CN.po  zh_TW.po
texi2html/test/: .cvsignore  Makefile.am  Makefile.in  README  base_tests  coverage_macro.texi  long_tests  path_separator.in  run_test.sh  run_test_all.sh  tests.sh
tp/: .cvsignore  Changes  MANIFEST  Makefile.PL  Makefile.am  README  TODO  prove.sh  regenerate_documentlanguages.pl  texi2any.pl
tp/DebugTexinfo/: DebugCount.pm  DebugTree.pm
tp/Texinfo/: Commands.pm  Common.pm  Documentlanguages.pm  Encoding.pm  Parser.pm  Report.pm  Structuring.pm
tp/init/: book.pm  chm.pm  html32.pm  latex2html.pm  mini_ker_t2h.init  tex4ht.pm
tp/maintain/: .cvsignore  MANIFEST_generated_files  all_tests.sh  change_perl_modules_version.sh  package_name.in  prepare_perl_module.sh  regenerate_converters_documentation.sh  regenerate_documentlanguages.pl  regenerate_file_lists.pl  regenerate_perl_module_files.sh  template.pod
tp/t/: .cvsignore  01use.t  02coverage.t  03coverage_braces.t  04verb.t  05paragraph.t  06columnfractions.t  08misc_commands.t  09indices.t  10menu.t  16raw.t  181quotation.t  18itemize.t  19def.t  20preformatted.t  21multitable.t  22xtable.t  25regions.t  27float.t  28heading.t  30sectioning.t  50value.t  55conditionals.t  57invalid_nestings.t  58alias.t  60macro.t  70value_and_macro.t  80include.t  README  accents.t  converters_tests.t  html_tests.t  info_tests.t  languages.t  manual_tree.pl  nodenormalization.t  paragraph.t  plaintext.t  plaintext_tests.t  test_count.t  (+4 more)
util/: .cvsignore  .gdbinit  Makefile.am  README  automake-1.6.3.diff  bibtex.test  defs.in  deref.c  dir-example  dvipdf.test  fixref.gawk  gdoc  gen-dir-node  gendocs.sh  gendocs_template  htmlxref.cnf  infosrch  install-info-html  install-info.c  latex2html.test  local.test  outline.gawk  pdftexi2dvi  prepinfo.awk  srclist-update  srclist.txt  texi-docstring-magic.el  texi2dvi  texi2dvi.test  texi2pdf  texindex.c  texinfo.dtd  txicmdlist  txitextest
util/tests/: Makefile.am
(+18437 files in other folders)
